# Simple-Ram-Cleaner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  requirements.txt
.cargo/: config.toml
src/: main.rs
