[package]
name = "simple_ram_cleaner"
version = "1.0.0"
edition = "2021"
authors = ["Zehelh"]
description = "Une application simple pour nettoyer la mémoire cache de Windows"

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus", 
    "Win32_System_Memory",
] }
anyhow = "1.0"
is_elevated = "0.1"
chrono = "0.4"
egui = "0.22.0"
eframe = { version = "0.22.0", features = ["persistence"] }
poll-promise = "0.3.0"
winapi = { version = "0.3.9", features = ["winuser", "windef", "sysinfoapi", "memoryapi"] }
image = "0.24.6"

[build-dependencies]
embed-resource = "2.3"
winres = "0.1.12"
image = "0.24.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true 